@@ -47,11 +47,15 @@ PARA_POSTFIX=
 #                  "high"     report differences in the whole files,
 #                             including iterative output at each step
 #                  "low"      try to focus only on the final results
+#
+# PLOT_SWITCH      whether plot calculation are performed or not
+#                  Allowed values: "yes", "no"
 # 
 
 WANT_BIN="`pwd`/../../bin"
 UTILITY_BIN="`pwd`/../../utility"
 VERBOSITY_LEVEL="low"      
+PLOT_SWITCH="yes"
 
 
 
