@@ -83,6 +83,11 @@ case $INPUT in
 esac
 
 #
+# switches
+#
+if [ "$PLOT_SWITCH" = "no" ] ; then PLOT=".FALSE." ; fi
+
+#
 # preliminaries
 #
 if [ -z "$CLEAN" ] ; then
